jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-http-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp-service
spec:
  ports:
  - port: 50000
    targetPort: 50000
    protocol: TCP
    name: jnlp
  selector:
    app: jenkins
