jenkins/ingress.yaml
apiVersion: extensions/v1beta1  
kind: Ingress  
metadata:  
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:  
  rules:
  - host: jenkins.ithub.space
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-http-service
          servicePort: 80
  tls:
  - hosts:
    - jenkins.ithub.space
    secretName: jenkins-ithub-space-prod-tls
